[project]
name = "st-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inquirerpy>=0.3.4",
    "rich>=14.1.0",
]

[project.scripts]
st-tools = "st_tools.cli.main:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]
